Fix: hide UserMenuTop overflowing text

--- a/src/components/UserMenuTop.css
+++ b/src/components/UserMenuTop.css
@@ -6,6 +6,7 @@
     top: 100%;
     margin:0;
     list-style-type: none;
+    overflow: hidden;
     padding: 0;
 }
 .container--userMenuTop li{
